--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "needle": "^3.0.0",
     "next": "12.0.7",
     "npm": "^8.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
