--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
