--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "scripts": {
     "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
+  },
+  "engines": {
+    "node": "8.9.3"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
