--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "needle": "^3.0.0",
     "next": "12.0.7",
+    "next-pwa": "^5.4.4",
     "npm": "^8.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
